# multiple_frameworks

./: .gitignore  README.md  docker-compose-dev.yaml  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  commands.txt
backend/db/: users.json
backend/src/: main.rs
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  angular.html  db.json  index.html  login.html  package.json  react.html  svelte.html  tsconfig.json  vite.config.js  vue.html
frontend/angular/app/: app.component.html  app.component.scss  app.component.ts  app.service.ts
frontend/assets/styles/: styles.css
frontend/index/: index.js  index.svelte
frontend/login/: login.js  login.svelte
frontend/react/: App.css  App.tsx
frontend/react/components/: Home.tsx  Login.tsx  header.tsx
frontend/svelte/: svelte.js  svelte.svelte
frontend/vue/: vue.js  vue.vue
frontend/web_server/: Cargo.toml
frontend/web_server/src/: main.rs
