[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hyper = { version = "1.3.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
http-body-util = "0.1.1"
tower-sessions = { version = "0.12.2", features = ["signed"] }
time = "0.3.36"
axum-macros = "0.4.1"
http = "1.1.0"
once_cell = "1.19.0"
